add_executable(ch4
        ch4/main.cpp
        ch4/median.cpp
        ch4/Student.cpp
        ch4/grade.cpp
        )
add_executable(ch5
        ch5/main.cpp
        ch5/median.cpp
        ch5/Student.cpp
        ch5/grade.cpp
        )
add_executable("Fail Extract"
        ch5/failMain.cpp
        ch5/Student.cpp
        ch5/grade.cpp
        ch5/median.cpp
        )