add_executable(ch4
        ch4/main.cpp
        ch4/median.cpp
        ch4/Student.cpp
        ch4/grade.cpp
        )
add_executable(ch5
        ch5/main.cpp
        ch5/median.cpp
        ch5/Student.cpp
        ch5/grade.cpp
        )
add_executable("Fail Extract"
        ch5/failMain.cpp
        ch5/Student.cpp
        ch5/grade.cpp
        ch5/median.cpp
        )
add_executable(spilt
        ch5/spilt/main.cpp
        ch5/spilt/spilt.cpp
        )
add_executable("Frame word"
        "ch5/Frame word/main.cpp"
        "ch5/Frame word/framWord.cpp"
        )
add_executable("algo spilt"
        ch6/spilt/main.cpp
        ch6/spilt/spilt.cpp
        )
add_executable("URL"
        "ch6/URL/main.cpp"

        )
add_executable("Static" ch6/static/main.cpp)
add_executable(map
        ch7/map/main.cpp
        )