cmake_minimum_required(VERSION 3.10)
project(Essential_C__)

set(CMAKE_CXX_STANDARD 11)

add_executable(Essential_C__ main.cpp)
add_executable(writAndRead ch1/writAndRead.cpp)
add_executable(1.5 ch1/1.5.cpp)
add_executable(1.6 ch1/1.6.cpp)
add_executable(1.7 ch1/1.7.cpp)
add_executable(2.1 ch2/2.1.cpp)