cmake_minimum_required(VERSION 3.10)
project(Leetcode)

set(CMAKE_CXX_STANDARD 11)


add_executable(ListFoundation "ch1 List/foundation.cpp")
add_executable(ReverseLinkedList "ch1 List/链表逆序/Reverse Linked List.cpp")

add_executable(ReverseLinkedList2 "ch1 List/链表逆序/Reverse Linked List 2.cpp")

#Boost
